--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@antv/g2": "^4.0.8",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
@@ -24,6 +25,7 @@
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "echarts": "^4.7.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
